criacao do arquivo localizadores.js,configuracao da baseUrl e chromeWebSecurity,criei 2 cenarios um deve realizar login e logout com sucesso,o segundo realiza login e e finaliza um checkout com sucesso

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/EdenilsonAlves/desafio-quero-ser-qa#readme",
   "devDependencies": {
-    "cypress": "^10.7.0"
+    "cypress": "^10.7.0",
+    "mochawesome": "^7.1.3"
   },
   "dependencies": {
     "eslint": "^8.23.0"
